<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    tools:context=".screen.login.LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_35"
        android:layout_marginTop="@dimen/sp_80"
        android:text="@string/login"
        android:textColor="@color/Green"
        android:textSize="@dimen/sp_38"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_0.3"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/text_email"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0"
        android:layout_margin="@dimen/dp_20"
        android:layout_marginStart="@dimen/dp_16"
        android:background="@drawable/bg_border_15dp"
        android:hint="@string/Email"
        android:paddingStart="@dimen/dp_10"
        android:textColorHint="@color/black"
        android:textSize="@dimen/sp_23"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline_0.3" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/text_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0"
        android:layout_margin="@dimen/dp_20"
        android:layout_marginStart="16dp"
        android:background="@drawable/bg_border_15dp"
        android:hint="@string/password"
        android:paddingStart="@dimen/dp_10"
        android:textColorHint="@color/black"
        android:textSize="@dimen/sp_23"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_email" />

    <TextView
        android:id="@+id/text_forgotpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_10"
        android:text="Forgot password"
        android:textColor="@color/Green"
        app:layout_constraintStart_toStartOf="@id/text_password"
        app:layout_constraintTop_toBottomOf="@id/text_password" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_0.6"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55" />

    <TextView
        android:id="@+id/button_login"
        android:layout_width="@dimen/dp_0"
        android:layout_height="@dimen/dp_0"
        android:layout_margin="@dimen/dp_20"
        android:background="@drawable/bg_green_border_15dp"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_20"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline_0.6"
        app:layout_constraintWidth_percent="0.6" />

    <TextView
        android:id="@+id/button_login_google"
        android:layout_width="@dimen/dp_0"
        android:layout_height="@dimen/dp_0"
        android:layout_margin="@dimen/dp_20"
        android:background="@drawable/bg_green_border_15dp"
        android:gravity="center"
        android:text="@string/loginwithgoogle"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_20"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_login"
        app:layout_constraintWidth_percent="0.6" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_0.9"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />

    <TextView
        android:id="@+id/text_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:textColor="@color/Green"
        android:textSize="@dimen/sp_23"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/text_create_account"
        app:layout_constraintTop_toTopOf="@id/guideline_0.9" />

    <TextView
        android:id="@+id/text_create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/createaccount"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_23"
        app:layout_constraintEnd_toStartOf="@+id/text_signup"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline_0.9" />
</androidx.constraintlayout.widget.ConstraintLayout>
