<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_0.1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:text="Account"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_38"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/image_avatar"
        android:layout_width="@dimen/dp_0"
        android:layout_height="@dimen/dp_0"
        android:layout_marginStart="@dimen/dp_20"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline_0.1"
        app:layout_constraintWidth_percent="0.27" />

    <TextView
        android:id="@+id/text_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:gravity="left|center"
        android:textColorHint="@color/black"
        android:textSize="@dimen/sp_20"
        app:layout_constraintBottom_toTopOf="@+id/text_email"
        app:layout_constraintStart_toEndOf="@+id/image_avatar" />

    <TextView
        android:id="@+id/text_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginBottom="@dimen/dp_10"
        android:gravity="left|center"
        android:textColorHint="@color/black"
        android:textSize="@dimen/sp_20"
        app:layout_constraintBottom_toBottomOf="@+id/image_avatar"
        app:layout_constraintStart_toEndOf="@+id/image_avatar" />

    <TextView
        android:id="@+id/button_changePassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0"
        android:layout_marginHorizontal="@dimen/dp_20"
        android:layout_marginVertical="@dimen/dp_50"
        android:background="@drawable/bg_border_15dp"
        android:gravity="center"
        android:text="@string/changepassword"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_20"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_email"
        app:layout_constraintWidth_percent="0.6" />

    <TextView
        android:id="@+id/button_changeProfile"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0"
        android:layout_margin="@dimen/dp_20"
        android:layout_marginHorizontal="@dimen/dp_20"
        android:background="@drawable/bg_border_15dp"
        android:gravity="center"
        android:text="@string/chaneprofile"
        android:textColor="@color/black"
        android:textSize="@dimen/dp_20"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_changePassword"
        app:layout_constraintWidth_percent="0.6" />

    <TextView
        android:id="@+id/button_logout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0"
        android:layout_margin="@dimen/dp_20"
        android:layout_marginHorizontal="@dimen/dp_20"
        android:background="@drawable/bg_border_15dp"
        android:gravity="center"
        android:text="@string/logout"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_20"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_changeProfile"
        app:layout_constraintWidth_percent="0.6" />

</androidx.constraintlayout.widget.ConstraintLayout>
